--- a/src/components/product/ProductViewItemsOrder/ProductViewItemsOrder.module.sass
+++ b/src/components/product/ProductViewItemsOrder/ProductViewItemsOrder.module.sass
@@ -11,6 +11,7 @@
     border-radius: 0.5rem
     background: $border-color
     width: fit-content
+    color: $main-contrast
     & > button
       display: flex
       justify-content: center
@@ -42,7 +43,7 @@
     padding: 0.5rem 1rem
     border: none
     border-radius: 0.5rem
-    background: linear-gradient(109.6deg, rgb(193, 98, 253) 11.2%, rgb(0, 49, 165) 91.1%)
+    background: $gradient
     font-weight: 700
     font-size: 1.2rem
     cursor: pointer
