--- a/src/components/shared/ShoppingCart/ShoppingCart.module.sass
+++ b/src/components/shared/ShoppingCart/ShoppingCart.module.sass
@@ -39,7 +39,7 @@
     padding: 1rem
     z-index: 2
   &__buyButton
-    background: $main-contrast
+    background: $gradient
     color: $text-color
     width: 100%
     padding: 0.5rem
