--- a/src/app/my-account/MyAccount.module.sass
+++ b/src/app/my-account/MyAccount.module.sass
@@ -3,7 +3,7 @@
   padding: 1.5rem
   max-width: 1080px
   &__title
-    background-image: linear-gradient(270deg, #4f56ff, #ff4980)
+    background-image: $gradient
     background-clip: text
     -webkit-text-fill-color: transparent
     font-size: 3rem
