--- a/src/app/store/StoreLayout.module.sass
+++ b/src/app/store/StoreLayout.module.sass
@@ -12,7 +12,7 @@
     column-gap: 1rem
     margin-bottom: 1rem
   &__chip
-    background: linear-gradient(109.6deg, rgb(193, 98, 253) 11.2%, rgb(0, 49, 165) 91.1%)
+    background: $gradient
     border-radius: 3rem
     padding: 0.5rem 1rem
     text-decoration: none
