--- a/src/components/signup/NewAccountForm/NewAccountForm.module.sass
+++ b/src/components/signup/NewAccountForm/NewAccountForm.module.sass
@@ -6,7 +6,7 @@
     font-size: 2rem
     font-weight: 700
     margin-bottom: 3rem
-    background-image: linear-gradient(270deg, #4f56ff, #ff4980)
+    background-image: $gradient
     background-clip: text
     -webkit-text-fill-color: transparent
   &__form
