--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -1,6 +1,6 @@
-$color-primary: #13111a
+$color-primary: #355070
 $color-secondary: #e4e1f6
-$border-color: #302c3f
+$border-color: #F6F1F1
 $text-color: #fff
-$gradient: linear-gradient(270deg, #4f56ff, #ff4980)
-$main-contrast: #ff4980
+$gradient: linear-gradient(270deg, #e56b6f, #eaac8b)
+$main-contrast: #6d597a
