Added nav items current page indicator

--- a/src/app/my-account/@ordersInfo/OrderInfo.module.sass
+++ b/src/app/my-account/@ordersInfo/OrderInfo.module.sass
@@ -5,12 +5,12 @@
   display: block
   padding: 0.75rem
   border-radius: 0.5rem
-  background: $border-color
+  background: $main-contrast
   font-weight: 300
   & > h3
     margin-top: 0
   &:last-child
     margin-bottom: 0
   &__quantity
-    color: $main-contrast
+    color: $border-color
     font-weight: bold
