--- a/src/components/shared/Header/Header.module.sass
+++ b/src/components/shared/Header/Header.module.sass
@@ -11,17 +11,13 @@
     margin: 0 auto
     padding: 2rem
     justify-content: center
-    & > li > a
-      color: $text-color
-      text-decoration: none
-      font-size: 1.2rem
-      font-weight: 400
   &__user
     margin-left: auto
     display: flex
     display-flow: row nowrap
     align-items: center
     column-gap: 1rem
+    list-style: none
     & > a
       color: $text-color
       text-decoration: none
