--- a/src/components/signup/NewAccountForm/NewAccountForm.module.sass
+++ b/src/components/signup/NewAccountForm/NewAccountForm.module.sass
@@ -39,8 +39,8 @@
       grid-area: f
     & > input[name="submit"]
       grid-area: g
-      border: 1px solid $main-contrast
-      background: transparent
+      border: none
+      background: $gradient
       color: $text-color
       padding: 1rem
       font-weight: 700
