Added Logout flow and session validations

--- a/src/app/my-account/MyAccount.module.sass
+++ b/src/app/my-account/MyAccount.module.sass
@@ -19,6 +19,7 @@
       border: 1px solid $border-color
       padding: 1rem
       border-radius: 0.5rem
+      position: relative
       & > h2
         margin-top: 0
         margin-bottom: 1rem
